--- a/MobileLab3_UWPClient/MainPage.xaml
+++ b/MobileLab3_UWPClient/MainPage.xaml
@@ -3,12 +3,52 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:MobileLab3_UWPClient"
+    xmlns:data="using:MobileLab3_UWPClient.Models"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
 
+        <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="12,17,0,28">
+            <TextBlock Text="Art Gallery" FontSize="28"  HorizontalAlignment="Center" />
+        </StackPanel>
+        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <StackPanel x:Name="ArtTypePanel" Grid.Row="0" Margin="12,0,12,0">
+                <TextBlock Text="Art by ArtType:" Margin="0,0,0,6"/>
+                <ComboBox x:Name="ArtTypeCombo" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" 
+                       DisplayMemberPath="Type" Margin="0,0,0,6" PlaceholderText=" - All Types" 
+                          SelectionChanged="ArtTypeCombo_SelectionChanged"/>
+            </StackPanel>
+            <GridView Name="patientList" Margin="30,0,0,0" Grid.Row="1" >
+                <GridView.ItemTemplate>
+                    <DataTemplate  x:DataType="data:Artwork">
+                        <StackPanel Width="300">
+                            <TextBlock Text="{x:Bind Name}" 
+                                      FontSize="24"/>
+                            <TextBlock Text="{x:Bind Description}" 
+                                      FontSize="14" />
+                        </StackPanel>
+                    </DataTemplate>
+                </GridView.ItemTemplate>
+            </GridView>
+        </Grid>
+        <ProgressRing x:Name="progRing" Grid.Row="1" Width="60" Height="60" />
+        <RelativePanel Grid.Row="2">
+            <!--<Button x:Name="btnRefresh" Content="Refresh" RelativePanel.AlignLeftWithPanel="False"
+                    Click="btnRefresh_Click" Margin="6,6,6,6" />
+            <Button x:Name="btnAdd" Content="Add Patient" RelativePanel.AlignHorizontalCenterWithPanel="True"
+                    Click="btnAdd_Click" Margin="6,6,6,6" />-->
+        </RelativePanel>
     </Grid>
 </Page>
