--- a/MobileLab3_UWPClient/ArtworkDetailPage.xaml
+++ b/MobileLab3_UWPClient/ArtworkDetailPage.xaml
@@ -3,12 +3,81 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:MobileLab3_UWPClient"
+    xmlns:data="using:MobileLab3_UWPClient.Models"
+    xmlns:Converters="using:MobileLab3_UWPClient.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <Grid>
+    <Page.Resources>
+        <Converters:DateTimeToOffsetConverter x:Key="DateTimeToOffsetConverter"/>
+        <Converters:ByteToStringConverter x:Key="ByteToStringConverter"/>
+    </Page.Resources>
 
+    <Grid x:Name="LayoutRoot">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <StackPanel Grid.Row="0" Margin="0,12,0,6">
+            <TextBlock Text="Medical Office" FontSize="24" Margin="12,0,0,0"/>
+            <TextBlock x:Name="txtPageTitle" Text="Patient" FontSize="20" Margin="13,3,0,3" />
+            <Rectangle Fill="#FFF4F4F5" Height="1" Stroke="Black" HorizontalAlignment="Stretch" Margin="0,2,0,2"/>
+        </StackPanel>
+        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="10,0,10,0">
+            <Grid Name="patientDisplayGrid">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+
+                <TextBlock Grid.Row="0" Grid.Column="0" HorizontalAlignment="Left" Margin="3,0,0,0"
+                           VerticalAlignment="Center" Name="NameTextBlock" Text="First Name" />
+                <TextBox Grid.Row="0" Grid.Column="1" Height="24" Name="NameTextBox" 
+                         MaxLength="30" InputScope="Text" Text="{x:Bind view.Name,Mode=TwoWay}" AcceptsReturn="False" />
+
+                <TextBlock Grid.Row="1" Grid.Column="0"  HorizontalAlignment="Left"  Margin="3,0,0,0"
+                           VerticalAlignment="Center" Name="DescriptionTextBlock" Text="Description" />
+                
+                <TextBox Grid.Row="2" Grid.Column="1" Height="24" Name="DescriptionTextBox" 
+                         MaxLength="50"  Text="{x:Bind view.Description, Mode=TwoWay}" AcceptsReturn="True" InputScope="Text" />
+                
+                <TextBlock Grid.Row="3" Grid.Column="0"  HorizontalAlignment="Left"  Margin="3,0,0,0"
+                           VerticalAlignment="Center" Name="ArtTypeTextBlock" Text="Art Type" />
+                <ComboBox x:Name="ArtTypeCombo" Grid.Column="1" Grid.Row="3" 
+                          HorizontalAlignment="Stretch" VerticalAlignment="Center"
+                          SelectedValuePath="ID"  DisplayMemberPath="Type" 
+                          SelectedValue="{x:Bind view.ArtTypeID, Mode=TwoWay}" />
+
+                <TextBlock Grid.Row="4" Grid.Column="0"  HorizontalAlignment="Left"  Margin="3,0,0,0"
+                           VerticalAlignment="Center" Name="ValueTextBlock" Text="Value" />
+                <TextBox Grid.Row="4" Grid.Column="1" Height="24" Name="ValueTextBox" 
+                         MaxLength="50"  Text="{x:Bind view.Value, Converter={StaticResource ByteToStringConverter}, Mode=TwoWay}" AcceptsReturn="False" InputScope="Number" />
+                
+                <CalendarDatePicker Header="Finished" Grid.Column="1" Grid.Row="5"  Date="{x:Bind view.Finished, Converter={StaticResource DateTimeToOffsetConverter}, Mode=TwoWay}"
+                                    HorizontalAlignment="Left" VerticalAlignment="Top"  />
+                
+                <RelativePanel Grid.Row="8" Grid.ColumnSpan="2">
+                    <Button x:Name="btnDelete" Content="Delete" RelativePanel.LeftOf="btnSave"
+                        Click="btnDelete_Click" Margin="6,6,0,6" />
+                    <Button x:Name="btnSave" Content="Save" RelativePanel.AlignHorizontalCenterWithPanel="True"
+                        Click="btnSave_Click" Margin="6,6,6,6" />
+                    <Button x:Name="btnCancel" Content="Cancel" RelativePanel.RightOf="btnSave"
+                        Click="btnCancel_Click" Margin="0,6,6,6" />
+                </RelativePanel>
+            </Grid>
+        </Grid>
     </Grid>
 </Page>
